<resources>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="app_name">iKonnect</string>
    <string name="app_version">V1.0</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">Get Started</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="dashboard">Home</string>
    <string name="emp_search_hint">Search By Name or Staff Number</string>
    <string name="my_favourate">My Favourites</string>
    <string name="my_profile">My Profile</string>
    <string name="track_service">Track Service Request</string>
    <string name="messages">Messages</string>
    <string name="pay_Slip">Pay Slip</string>
    <string name="message">Message</string>
    <string name="notification">Notifications</string>
    <string name="weekDate">Monday 03</string>
    <string name="payslip">Pay slips</string>
    <string name="settings">Settings</string>
    <string name="InBox">Inbox</string>
    <string name="Chat">Chat</string>
    <string name="Calender">Calendar</string>
    <string name="TandC">Terms &amp; Conditions</string>
    <string name="logout">Logout</string>
    <string name="Pn">Push Notification</string>
    <string name="Language">Change language</string>
    <string name="Cp">Change Password</string>
    <string name="CU">Contact Us</string>
    <string name="Th">Quote of the day </string>
    <string name="forget">FORGOT?</string>
    <string name="version">V 1.0</string>
    <string name="alert">ALERT</string>
    <string name="force_logout">You have logged in from a new device. You will be logged out from this device.</string>
    <string name="select_language">Please select language</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="change_pass">Change Password</string>
    <string name="mycalender">My Calendar</string>
    <string name="success">Success</string>
    <string name="warning">WARNING</string>
    <string name="OK">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="No_Network">No Internet connection, Please check your connection and try again.</string>
    <string name="No_Network_connection">No Internet connection, Please check your connection and try again.</string>
    <string name="enter_your_comment">Please enter your comment.</string>
    <string name="enter_your_message">Please enter your message.</string>
    <string name="license">Please mention Do you have a valid UAE/Oman Driving Licence</string>
    <string name="warning_license">Employee without a valid UAE/Oman driving license is not eligible for this loan</string>
    <string name="transportLoan_attach_popup1">Quotation/Registered Vehicle Evaluation, RTA Passing Certificate, Dealer\'s Trade License/Seller\'s Passport Copy, Possession Certificate/Car Registration Card Copy are required.</string>
    <string name="transportLoan_attach_popup2">Please make sure you have attached:\n\n1.Quotation/Registered Vehicle Evaluation.\n\n2.RTA Passing Certificate.\n\n3.Dealer\'s Trade License/Seller\'s Passport Copy.\n\n4.Possession Certificate/Car Registration Card Copy.</string>
    <string name="sick_leave">Please attach sick leave document</string>
    <string name="transportLoan_attach_new">Please attach your Quotation for New car</string>
    <string-array name="family_relation">
        <item>Father</item>
        <item>Mother</item>
        <item>Brother</item>
        <item>Sister</item>
    </string-array>
    <string name="fetch_feeds">Fetching Feeds...</string>
    <string name="sharing">Sharing please wait...</string>
    <string name="loading">Loading...</string>
    <string name="loading_feeds">Loading Feeds...</string>
    <string name="loading_notifications">Loading Notifications...</string>
    <string name="loading_likes">Loading Likes...</string>
    <string name="loading_comments">Loading Comments...</string>
    <string name="Likes">Likes</string>
    <string name="Comments">Comments</string>
    <string name="Feeds">Feeds</string>
    <string name="Posting_your_comment">Posting your comment...</string>
    <string name="news_feeds">News Feed</string>
    <string name="service_request">Services</string>
    <string name="track">Track</string>
    <string name="liked">Liked</string>
    <string name="like">Like</string>
    <string name="likes">%s Likes</string>
    <string name="key_get_data">getdata</string>
    <string name="comments">%s Comments</string>
    <string name="views">%s Views</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="mins_ago"> mins ago</string>
    <string name="hour_ago"> hour ago</string>
    <string name="fetching_categories">Fetching Categories...</string>
    <string name="filter_title">Filter News Feed</string>
    <string name="apply">APPLY</string>
    <string name="comment_hint">Write your comment here...</string>
    <string name="type_message">Type a message...</string>
    <string name="no_feeds">No Feeds found.</string>
    <string name="no_Notications">No Notifications found.</string>
    <string name="type_of_request">Type of Request</string>
    <string name="does_ur_job_require_dl">Does your job require driving license ?</string>
    <string name="cost_charge_to">Cost Charge to</string>
    <string name="chamber_of_commerce_status">Chamber of Commerce Status</string>
    <string name="is_salary_require">Is salary required in letter ?</string>
    <string name="amount_reimbursable">Amount % Reimbursable</string>
    <string name="clinic_in_network">Clinic in network</string>
    <string name="medical_card_used">Medical card used</string>
    <string name="reason_for_travel">Reason for Travel</string>
    <string name="proceed">Proceed</string>
    <string name="CHOOSE_PASSWORD">Choose Password</string>
    <string name="Choose_password_hint">Choose Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="Iagree">I AGREE</string>
    <string name="Proceed">Proceed</string>
    <string name="wel">WELCOME</string>
    <string name="welcome">Welcome to iKonnect - easy app to make your work easier</string>
    <string name="ac">1. Acceptance of terms &amp; conditions</string>
    <string name="detail1">If you’re Alseer Employee, you are most welcome to Almarai HR iKonnect app. Whether you have an existing account in the app (user) or a new user, your access to the app is governed by the following terms &amp; conditions. The app of Almarai Company maintains the right to revise service conditions from time to time without prior notice or approval of the user. You may review the updated version of the service conditions from time to time on this page.</string>
    <string name="ac1">2. Service description</string>
    <string name="detail2">User Registration enables employees of Alseer to register in the iKonnect in order to be able to benefit from a list of HR Services available. This process is implemented in order to give the employees opportunity to use those services themselves without visiting their HR offices in person. By doing this, user will have a unique username (their staff number) &amp; password which will be linked only to their SAP profile.</string>
    <string name="ac2">The process consists of 2 steps:</string>
    <string name="h1">Registration Request</string>
    <string name="detail3">where user enters his/her staff number, a valid Alseer email address, &amp; a valid mobile number to be contacted on (must be registered in SAP already).</string>
    <string name="h2">Request Verification</string>
    <string name="detail4">where the user is asked to enter a code number after completing step one successfully.\n \n If you did not receive a code within an hour it means your personal information is not updated in SAP, you need to physically visit your HR. (You can re-register your account after your information are updated successfully in SAP). By completing updating of your information, you can have access to the iKonnect services provided by Alseer.
                            You shall maintain your portal password &amp; account details. You shall be solely responsible for all the activities conducted using your account &amp; password. You should acknowledge that you agree to the following:\n
                            1. Immediately report to the administrations any unauthorized use of your account or/&amp; password.\n
                            2. You should ensure registration of exit from iKonnect each time you use the app. eConnect will not be responsible for any loss or damage that may occur by reason of violation of the provisions of these two paragraphs.\n
                            3. Ensure you provide authentic, correct, complete &amp; updated information about yourself according to the registration format requirements.</string>
    <string name="ac10">4.Termination &amp; Cancellation</string>
    <string name="detail5">If service is terminated it will be with immediate effect. Following termination, you cannot access your account or associated services. iKonnect shall assume no accountability for such action. However, you can browse the general information pages on the app like any other employee.
                        You shall acknowledge &amp; accept that under certain circumstances, iKonnect may, without prior notice, immediately terminate your subscription to the services it provides. Reasons for termination may include, but are not limited to:\n
                        1. Total or partial violation of service terms &amp; conditions\n
                        2. Judicial orders or dem&amp;s from other Alseer authorities\n
                        3. In response to a personal request from you\n
                        4. Cessation or failure to update particulars of the service of parts related thereto\n
                        5. Unexpected technical failure\n
                        Termination of your subscription to iKonnect app shall entail:\n
                        1. Termination of access to the service &amp; its sub-components.\n
                        2. Deletion of the password &amp; all your details as well as existing files of your account.\n
                        3. Deny future access to service. It is understood that iKonnect app will not be liable to any accountability from you or from any third party for justified termination of the account.</string>
    <string name="ac4">Ownership of iKonnect account &amp; associated security procedure.</string>
    <string name="detail6">You shall maintain the security of your account &amp; shall be solely responsible of all activities performed using your account or any other actions to establish access to the portal.
                        You shall undertake to immediately report to iKonnect any unauthorized use of your account or any security violation thereto. eConnect will not assume any responsibility for loss or damage resulting from your failure to comply with the security condition.
                        You shall also be aware that you acknowledge full responsibility for using your user name &amp; password &amp; necessary st&amp;ards to maintain them, &amp; should not disclose the password to any one or any other party.
                        You shall be aware &amp; agree that, under no circumstances, iKonnect will be responsible in any way for any action or deletion performed by the user or the portal system administrators that may result in any damage.</string>
    <string name="earning">Earnings</string>
    <string name="abs_type">Absent Type</string>
    <string name="st_dt">Start Date</string>
    <string name="end_dt">End Date</string>
    <string name="tot_days">Total Days</string>
</resources>