<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bgnew"
    android:gravity="center"
    >
    <TextView
        android:layout_marginTop="@dimen/margin_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_15"
        android:drawableBottom="@drawable/textunderline"
        android:drawablePadding="@dimen/margin_2"
        android:gravity="center"
        android:hint="@string/CHOOSE_PASSWORD"
        android:paddingLeft="@dimen/margin_5"
        android:textColorHint="@color/app_color"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_very_small_14"
        android:background="@drawable/input_feild"
        android:paddingLeft="@dimen/margin_5"
        android:inputType="textPassword"
        android:hint="@string/Choose_password_hint"
        android:singleLine="true"
        android:layout_marginBottom="@dimen/margin_15"
        />
    <EditText
        android:id="@+id/et_confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:singleLine="true"
        android:textSize="@dimen/text_size_very_small_14"
        android:background="@drawable/input_feild"
        android:inputType="textPassword"
        android:textColor="@color/gray_dark"
        android:paddingLeft="@dimen/margin_5"
        android:hint="@string/confirm_password_hint"
        android:layout_marginBottom="@dimen/margin_15"
        />

    <Button
        android:id="@+id/tv_push"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/signuo"
        android:textColor="@color/white"
        android:onClick="postPasswordRequest"
        android:gravity="center"
        android:text="@string/proceed"
        android:layout_marginBottom="@dimen/margin_10"
        />

</LinearLayout>
