<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_5"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/abs_type"
            android:textColor="@color/black_light"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_absent_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/earning"
            android:textColor="@color/black_light"
            android:textSize="@dimen/text_size_small"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/st_dt"
            android:textColor="@color/black_light"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/earning"
            android:textColor="@color/black_light"
            android:textSize="@dimen/text_size_small"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end_dt"
            android:textColor="@color/black_light"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/earning"
            android:textColor="@color/black_light"
            android:textSize="@dimen/text_size_small"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tot_days"
            android:textColor="@color/black_light"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_total_days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/earning"
            android:textColor="@color/black_light"
            android:textSize="@dimen/text_size_small"/>

    </LinearLayout>

</LinearLayout>
</layout>