<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/app_color">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_10"
            android:src="@drawable/back_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal"
            android:layout_marginLeft="@dimen/margin_72"
            android:layout_marginStart="@dimen/margin_72"
            android:layout_centerVertical="true"
            android:text="@string/filter_title"/>
    </RelativeLayout>
    <ExpandableListView
        android:id="@+id/elCategoryFilter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:groupIndicator="@null"
        android:background="@color/white"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/margin_5"
        android:layout_marginRight="@dimen/margin_5"
        android:layout_marginEnd="@dimen/margin_5"
        android:childDivider="@color/transparent"
        android:layout_marginLeft="@dimen/margin_5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/margin_15"
        android:background="@color/white"
        android:layout_marginStart="@dimen/margin_5"
        android:layout_marginRight="@dimen/margin_5"
        android:layout_marginEnd="@dimen/margin_5"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_5">
        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/roundcorner"
            android:padding="@dimen/margin_8"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cancel"
            android:layout_marginRight="@dimen/margin_15"
            android:layout_marginEnd="@dimen/margin_15"
            android:textSize="@dimen/text_size_very_small_14"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvApply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/approundcorner"
            android:padding="@dimen/margin_8"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_14"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>